--- a/index.html
+++ b/index.html
@@ -18,7 +18,43 @@
 </head>
 
 <body>
+  <!-- Header -->
+  <header class="header">
+    <h1 class="title">Etch-A-Sketch</h1>
+  </header>
+
+  <main>
+    <!-- Settings -->
+    <section class="settings-section">
+      <p>Color picker</p>
+      <p>Color mode</p>
+      <p>Pencil mode</p>`
+      <p>Rainbow mode</p>
+      <p>Eraser</p>
+      <p>Clear grid</p>
+      <p>Toggle grid</p>
+      <p>Grid's size slider LABEL</p>
+      <p>Grid's size slider INPUT</p>
+    </section>
+
+    <!-- Grid -->
+    <section class="grid-section">
+      <div class="grid"></div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p class="footerText">
+      Made by <a href="https://github.com/cazbacelar" title="github profile" target="_blank">Carolina Bacelar <i
+          class="fa-brands fa-github fa-lg"></i></a> | <a href="https://www.flaticon.com/free-icons/pencil"
+        title="pencil icons" target="_blank">Favicon created by
+        Freepik - Flaticon</a>
+    </p>
+  </footer>
+
   <!-- Script tags -->
+  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
     crossorigin="anonymous"></script>
