add slider input to upgrade the grid according to the input's value

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <section class="settings-section">
       <p>Color picker</p>
       <p>Color mode</p>
-      <p>Pencil mode</p>`
+      <p>Pencil mode</p>
       <p>Rainbow mode</p>
       <p>Eraser</p>
       <p>Clear grid</p>
       <p>Toggle grid</p>
-      <p>Grid's size slider LABEL</p>
-      <p>Grid's size slider INPUT</p>
+      <label for="slider" id="sliderLabel">16 x 16</label>
+      <input type="range" id="slider" name="slider" min="1" max="100" value="16">
     </section>
 
     <!-- Grid -->
