Implement change grid background color button/functionality

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
   <main>
     <!-- Settings -->
     <section class="settings-section">
-      <p>Color picker</p>
-      <p>Background Color</p>
-      <p>Color mode</p>
+      <label for="">Grid Background Color</label>
+      <input type="color" class="bgColorPicker" value="#ffffff">
+      <p>Color picker for pen/pencil</p>
+      <p>Pen mode</p>
       <p>Pencil mode</p>
       <p>Rainbow mode</p>
       <p>Eraser</p>
