--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/1a3d754de7.js" crossorigin="anonymous"></script>
 </head>
 
@@ -23,15 +21,21 @@
     <h1 class="title">Etch-A-Sketch</h1>
   </header>
 
-  <main>
+  <main class="main-container">
     <!-- Settings -->
     <section class="settings-section">
       <!-- Color settings -->
-      <label for="bgColorPicker">Grid Background Color</label>
+      <label for="bgColorPicker">Grid Background</label>
       <input type="color" class="bgColorPicker" id="bgColorPicker" value="#ffffff">
-      <label for="penColorPicker">Pen/Pencil Color</label>
+      <label for="penColorPicker">Pen/Pencil</label>
       <input type="color" class="penColorPicker" id="penColorPicker" value="#333333">
+    </section>
+      <!-- Grid -->
+    <section class="grid-section">
+      <div class="grid"></div>
+    </section>
 
+    <section class="settings-section">
       <!-- Modes -->
       <p>Modes:</p>
       <button class="penBtn">Pen</button>
@@ -45,17 +49,12 @@
       <label for="slider" id="sliderLabel">16 x 16</label>
       <input type="range" id="slider" name="slider" min="1" max="100" value="16">
     </section>
-
-    <!-- Grid -->
-    <section class="grid-section">
-      <div class="grid"></div>
-    </section>
   </main>
 
   <!-- Footer -->
   <footer class="footer">
     <p class="footerText">
-      Made by <a href="https://github.com/cazbacelar" title="github profile" target="_blank">Carolina Bacelar <i
+      Made by <a href="https://github.com/cazbacelar" title="github profile" target="_blank">Caz <i
           class="fa-brands fa-github fa-lg"></i></a> | <a href="https://www.flaticon.com/free-icons/pencil"
         title="pencil icons" target="_blank">Favicon created by
         Freepik - Flaticon</a>
@@ -64,9 +63,6 @@
 
   <!-- Script tags -->
   <script src="script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-    crossorigin="anonymous"></script>
 </body>
 
 </html>
