change header padding

--- a/index.html
+++ b/index.html
@@ -22,33 +22,34 @@
   </header>
 
   <main class="main-container">
-    <!-- Settings -->
-    <section class="settings-section">
-      <!-- Color settings -->
-      <label for="bgColorPicker">Grid Background</label>
-      <input type="color" class="bgColorPicker" id="bgColorPicker" value="#ffffff">
-      <label for="penColorPicker">Pen/Pencil</label>
-      <input type="color" class="penColorPicker" id="penColorPicker" value="#333333">
-    </section>
-      <!-- Grid -->
+
+    <!-- Grid -->
     <section class="grid-section">
       <div class="grid"></div>
     </section>
+    
+    <!-- Settings -->
+    <section class="settings-section left">
+      <!-- Color settings -->
+      <label for="bgColorPicker" class="colorLabel">Grid</label>
+      <input type="color" class="bgColorPicker" id="bgColorPicker" value="#ffffff">
+      <label for="penColorPicker" class="colorLabel">Pen/Pencil</label>
+      <input type="color" class="penColorPicker" id="penColorPicker" value="#333333">
+    </section>
 
-    <section class="settings-section">
+    <section class="settings-section right">
       <!-- Modes -->
-      <p>Modes:</p>
       <button class="penBtn">Pen</button>
       <button class="pencilBtn">Pencil</button>
       <button class="rainbowBtn">Rainbow</button>
       <button class="eraserBtn">Eraser</button>
 
-      <!-- Some other buttons -->
       <button class="clearBtn">Clear grid</button>
       <button id="toggleBtn">Toggle grid</button>
       <label for="slider" id="sliderLabel">16 x 16</label>
       <input type="range" id="slider" name="slider" min="1" max="100" value="16">
     </section>
+
   </main>
 
   <!-- Footer -->
