add active class for current mode

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <main class="main-container">
         <!-- Settings -->
         <section class="settings-section">
-          <button class="penBtn">Pen</button>
+          <button class="penBtn active">Pen</button>
           <button class="pencilBtn">Pencil</button>
           <button class="rainbowBtn">Rainbow</button>
           <button class="eraserBtn">Eraser</button>
